[tool.poetry]
name = "poetry-task"
version = "0.1.0"
description = ""
authors = ["irina <neeiraaaa@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_task"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
selene = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
